<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Budilnik</string>
    <string name="check_internet">No internet!</string>

    <string name="timer_h">hour</string>
    <string name="timer_m">min.</string>
    <string name="timer_s">sec.</string>

    <string name="clear">CLEAR</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>

    <string name="timer_label">Timer</string>

    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
</resources>
